properly fixed legibility on landing

--- a/public/index.css
+++ b/public/index.css
@@ -14,7 +14,7 @@
 }
 
 .headline {
-  font-size: 90px;
+  font-size: 50px;
 }
 
 .subheadline {
